[tool.poetry]
name = "cvstudio"
version = "0.1.0"
description = "Computer vision projects annotation tools"
authors = ["haruiz <henryruiz22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
pyqt5 = "^5.15.1"
peewee = "^3.13.3"
matplotlib = "^3.3.2"
more_itertools = "^8.5.0"
dask = {extras = ["complete"], version = "^2.30.0"}
hurry = "^1.1"
"hurry.filesize" = "^0.9"
mako = "^1.1.3"
imutils = "^0.5.3"
pandas = "^1.1.3"
opencv-python = "4.1.0.25"
marshmallow = "^3.8.0"

[tool.poetry.scripts]
cvstudio='cvstudio.__main__:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
